# engine-room

./: .env  .gitignore  CLAUDE.md  Dockerfile.base  Dockerfile.capella  Dockerfile.dbmac  Dockerfile.fedora-capella  Dockerfile.ja  Dockerfile.os  Dockerfile.test  README.md  __main__.py  capella_startup.py  config.yml  docker-compose.yml  entrypoint.py  ruff.toml  supervisor.py  white-page.html
dotfiles/: .gitignore  JARDOC.md  actrc  backup_volume_rsync_exclude.list  claude.json  claude.json.backup  entrypoint.py  gdbextension.py  gdbinit  gitconfig  gitconfig_dbgitlab  gitconfig_github  gitconfig_gitlab  gitignore  gitmessage  id_ed25519.pub  logger.py  open_diagrams.aichat  openapi_schema.yaml  pdbrc  pdbrc.py  pip.conf  pygmentsstyles.py  requirements.txt  uv.toml  vimrc  zshrc
dotfiles/bat/config/: bat.conf
dotfiles/bat/config/themes/JAR/: JAR.tmTheme
dotfiles/gnupg/: pubring.kbx
dotfiles/ipython/profile_default/: ipython_config.py
dotfiles/ipython/profile_default.bak/db/: dhist
dotfiles/ipython/profile_default.bak/startup/: 00-magic.py
dotfiles/ipython/profile_default/db/: dhist
dotfiles/ipython/profile_default/startup/: 00-magic.py  01-nvim.py  01-pythonpath.py  02-finances.py  pyproject.toml  tox.ini
dotfiles/kitty-config/: diff.conf.bak  fuzzy.py  kitty.conf  pyproject.toml  startup_session
dotfiles/kitty-config/typings/pyfzf/: __init__.pyi  pyfzf.pyi
dotfiles/kube/: config
dotfiles/nvim-config/: Dockerfile  git  init.lua  lazy-lock.json  vim-ai-roles.ini
dotfiles/nvim-config/docs/: CHEATSHEET.md  JARDOC.md  KEYMAPS.md
dotfiles/nvim-config/ftplugin/: aichat.lua  csv.lua  dockerfile.lua  fugitive.lua  gitcommit.lua  java.lua  json.lua  lua.lua  markdown.lua  python.lua  qf.lua  toml.lua  xml.lua  yaml.lua  zsh.lua
dotfiles/nvim-config/jopilot/: CONTRIBUTING.md  debug.py  pyproject.toml  test.py
dotfiles/nvim-config/jopilot/src/jopilot/: format.py  outline.py
dotfiles/nvim-config/llms.txts/: keepassxc-cli.txt  mypy_help.txt  ruff_help.txt  ruff_help.zsh
dotfiles/nvim-config/lua/: plugins.lua
dotfiles/nvim-config/lua/config/: nvim-cmp.lua
dotfiles/nvim-config/lua/init/: autocmd.lua  diagnostic.lua  function.lua  global.lua  highlight.lua  keymap.lua  lazy.lua  lsp.lua  option.lua  usercommand.lua
dotfiles/nvim-config/lua/plugins/: blink.cmp.lua  chatgpt.lua  codecompanion.lua  copilot.lua  dadbod.lua  debug.lua  git.lua  image.lua  jinja.lua  kitty.lua  lsp.lua  lualine.lua  markdownpreview.lua  marks.lua  nvim-coverage.lua  oil.lua  statusline.lua  taboo.lua  treesitter.lua  vim-bookmarks.lua
dotfiles/nvim-config/queries/python/: folds.scm
dotfiles/nvim-config/rplugin/python3/: jopilot.py  pyproject.toml
dotfiles/nvim-config/snippets/: aichat.json  dxl.json  gitcommit.json  global.json  html.json  javascript.json  json.json  jsonc.json  lua.json  markdown.json  properties.json  python.json  rst.json  shellscript.json  typescript.json  yaml.json  zsh.json
dotfiles/nvim-config/spell/: en.utf-8.add  en.utf-8.add.spl
dotfiles/opencode/: AGENTS.md  opencode.json  tui.json
dotfiles/opencode/agents/: neovim-specialist.md  nerd.md  opencode.md  systems-and-requirements-engineer.md
dotfiles/opencode/ai-sdk-genaihub/: package-lock.json
dotfiles/opencode/ai-sdk-genaihub/src/: convert-from-bedrock.ts  convert-to-bedrock.ts  genaihub-language-model.ts  genaihub-provider.ts  index.ts
dotfiles/opencode/commands/: neovim.md
dotfiles/opencode/skills/download-document-from-polarion/: SKILL.md
dotfiles/opencode/skills/download-document-from-polarion-db-prod/: SKILL.md
dotfiles/opencode/skills/opencode-manage-agents/: SKILL.md
dotfiles/opencode/skills/opencode-manage-skills/: SKILL.md
dotfiles/opencode/skills/opencode-manage-tools/: SKILL.md
dotfiles/opencode/skills/understand-polarion-data/: SKILL.md
dotfiles/opencode/skills/use-jira-rest-api/: SKILL.md
dotfiles/opencode/tools/: polariondoc2yaml.py
dotfiles/rclone/: rclone.conf
dotfiles/ruff/: pyproject.toml
dotfiles/ssh/: authorized_keys  config  known_hosts
dotfiles/vifm-config/: vifmrc
dotfiles/vifm-config/colors/: JAR.vifm
dotfiles/zsh/: aliases.zsh  funcs.zsh  oh-my-zsh.zsh  p10k.zsh  pyenv.zsh  vifm.zsh  zsh.zsh  zshrc
dotfiles/zsh/env/: ALL_HOSTS.zsh  capella-7.0.0.zsh  dbmac.zsh
dotfiles/zsh/init/: ALL_HOSTS.py
dotfiles/zsh/interactive/: ALL_HOSTS.zsh
dotfiles/zsh/profile/: ALL_HOSTS.zsh  dbmac.zsh
engine-rooms/: capella  os
images/: base  capella  dbmac  fedora-capella  os  test
